--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,6 @@ cython_debug/
 scratch.ipynb
 example/subcatalog.fits
 ucd1p-words.txt
+.DS_Store
+consolidated_catalog_ver1.0.0.fits
+example/VanEck2011_table.fits
